@@ -1,5 +1,6 @@
 Version 0.8.9, 2004-11-11
 - ThumbnailWriter are instantiated by reflection and specified in web.xml
+- for subfolders a random image can be used as icon (old way with folder icon can be configured with foldericon.style=icon
 
 Version 0.8.8, 2004-09-08
 - added a parameter parentlink.XXX=<link> in jGallery.properties, which generates an up-link for gallery XXX.
